<resources>
    <string-array name="navigation_drawer_items_array">
        <item>Home</item>
        <item>About_Us</item>
        <item>Contact_Us</item>
        <item>ApplyNow</item>
        <item>Contestants</item>
        <item>Photo_Gallery</item>
        <item>Video_Gallery</item>
        <item>Meet_the_Sponsers</item>
    </string-array>
    <string name="Home">Home</string>
    <string name="About_Us">About_Us</string>
    <string name="SignUp">SignUp</string>
    <string name="Contestants">Contestants</string>
    <string name="Photo_Gallery">Photo_Gallery</string>
    <string name="Video_Gallery">Video_Gallery</string>
    <string name="Meet_the_Sponsers">Meet_the_Sponsers</string>
    <string name="Contact_Us">Contact_Us</string>
    <string name="Logout">Logout</string>
    <string name="app_name">Indo_Asia</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="instructions">Press the Share icon to share some sample text</string>
    <string name="profile_desc">Rowan Sebastian Atkinson CBE is an English actor,  comedian and screenwriter</string>
    <string name="profile_title">Mr Bean</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="register" />
    <string name="Login" />
    <string name="password" />
    <string name="repassword" />
    <string name="apply_now" />
    <string name="cancel" />
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">1303, Supreme 19 3c Cross Rd Lokhanwala Complax Andheri West 400053</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign Out</string>
    <string name="hint_phone_number">Enter Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="my_best_text" />
    <string name="textstring">Conceptualized and produced by Sheeny Star Maker Pvt. Ltd. and supported by the key members of the Beauty fraternity, MIA is the most appreciated Asia and a global platform that gives the Indian fashion/ film fraternity an opportunity to reach audiences in international territories. The alliances made via the platform of MIA provide huge benefits and gain to India but an equally important objective of this prestigious brand is to create similar outcomes in its host country.  The aim is to establish a system of mutual benefit to both India as well as the host destinations by boosting tourism, economic development, trade, culture, cross-border investments and fashion/ film co-productions.
                 Sheeny Star Maker Pvt. Ltd promotes the MIA Weekend and TIA globally each year and travel to new, exciting and beautiful destinations, taking the Beauty fraternity with it to unite and celebrate the best of Indian film and culture, thereby taking Indian Cinema and India to a wider audience."</string>
    <string name="phone_number">Phone Number</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_sign_in">VerifState</string>
    <string name="State">state</string>
    <string name="City">City</string>
    <string name="Country">Country</string>
    <string name="sponsortext">Become A Sponsor
We would like to invite you to become a part of this prestigious platform for the local talent to come under a grand limelight by being our generous Miss Indo Asia 2019 sponsor.</string>
    <string name="title_activity_basic">basic</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_back" />
    <string name="title_usb" />
    <string name="title_logo">logo</string>
    <string name="btnCapture">capture</string>
    <string name="need_camera_permissions">This app needs the WRITE_EXTERNAL_STORAGE, RECORD_AUDIO
        and CAMERA permissions to capture video from the camera.</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="nonce_placeholder">Nonce: %s</string>
    <string name="ideal_id_placeholder">iDEAL payment id: \n %s</string>
    <string name="ideal_status_placeholder">iDEAL payment status: \n %s</string>
    <string name="device_data_placeholder">Device Data: %s</string>
    <string name="drop_in">Drop-In</string>
    <string name="google_pay">Google Pay</string>
    <string name="paypal_button">@string/paypal</string>
    <string name="visa_checkout_button">Visa Checkout</string>
    <string name="ideal_button">Pay with iDEAL</string>
    <string name="ideal_bank_icon">iDEAL bank icon</string>
    <string name="local_payments_button">Local Payments</string>
    <string name="cards">Credit or Debit Cards</string>
    <string name="create_transaction">Create a Transaction</string>
    <string name="loading">Loading…</string>
    <string name="buy">Buy</string>
    <string name="payment_icon">payment icon</string>
    <string name="purchase">Purchase</string>
    <string name="send_sms">Send SMS</string>
    <string name="sms_auth_code">SMS Auth Code</string>
    <string name="processing_transaction">Processing Transaction</string>
    <string name="transaction_failed">Transaction Failed</string>
    <string name="transaction_complete">Transaction Complete</string>
    <string name="empty"></string>
    <string name="none">None</string>
    <string name="options">Options</string>
    <string name="sandbox">Sandbox</string>
    <string name="production">Production</string>
    <string name="authorization">Authorization</string>
    <string name="tokenization_key">Use Tokenization Key</string>
    <string name="tokenization_key_summary">Use tokenization key for authorizing requests</string>
    <string name="customer">Customer</string>
    <string name="customer_summary">The customer id to use</string>
    <string name="merchant_account">Merchant Account</string>
    <string name="empty_merchant_account">Not specifying a merchant account will use the default merchant account. \n\nMerchant Account: %s</string>
    <string name="collect_device_data">Collect Device Data</string>
    <string name="collect_device_data_summary">Collects device data for fraud purposes</string>
    <string name="android_pay">Android Pay</string>
    <string name="usd">USD</string>
    <string name="us">US</string>
    <string name="android_pay_require_shipping_address">Require Shipping Address</string>
    <string name="android_pay_require_shipping_address_summary">Require shipping address from the user</string>
    <string name="android_pay_require_phone_number">Require Phone Number</string>
    <string name="android_pay_require_phone_number_summary">Require phone number from the user</string>
    <string name="android_pay_currency_title">Currency</string>
    <string name="android_pay_currency_summary">Must be ISO–4217 format. \n\nCurrency: %s</string>
    <string name="android_pay_allowed_countries_for_shipping_title">Allowed countries for shipping</string>
    <string name="android_pay_allowed_countries_for_shipping_summary">Must be ISO–3166–2, separate by comma for multiple countries. \n\nCountries: %s</string>
    <string name="google_payment_require_billing_address">Require Billing Address</string>
    <string name="google_payment_require_billing_address_summary">Require billing address from the user</string>
    <string name="google_payment_allow_prepaid_cards">Allow Prepaid Cards</string>
    <string name="google_payment_allow_prepaid_cards_summary">Allow the user to use prepaid cards as a payment method</string>
    <string name="google_payment_require_email">Require Email Address</string>
    <string name="google_payment_require_email_summary">Require email address from the user</string>
    <string name="paypal">PayPal</string>
    <string name="paypal_use_hardcoded_configuration">Use Hardcoded Configuration</string>
    <string name="paypal_use_hardcoded_configuration_summary">Use the configuration included in the PayPal SDK instead of downloading new configuration</string>
    <string name="paypal_request_address_scope">Request Address Scope</string>
    <string name="paypal_request_address_scope_summary">Request address scope from the user</string>
    <string name="three_d_secure">3D Secure</string>
    <string name="enable_three_d_secure">Enable 3D Secure</string>
    <string name="enable_three_d_secure_summary">3D Secure will automatically be run on all Card payment methods</string>
    <string name="require_three_d_secure">Require 3D Secure</string>
    <string name="require_three_d_secure_summary">Requires a successful authentication for 3D Secure transactions</string>
    <string name="paypal_disable_signature_verification">Disable app switch signature verification</string>
    <string name="paypal_disable_signature_verification_summary">Allows app switch with a PayPal Wallet app that is not signed</string>
    <string name="paypal_single_payment">Single Payment</string>
    <string name="paypal_billing_agreement">Billing Agreement</string>
</resources>