<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/newbk"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical"
        android:background="@drawable/border">


        <ImageView
            android:id="@+id/imageViewv"
            android:layout_width="306dp"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:src="@drawable/icon" />

        <EditText
            android:id="@+id/editname"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:hint="Enter Full Name"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#666666"
            android:textColorHint="#666666"
            android:textSize="16sp" />


        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/editEmailId"
            android:layout_width="fill_parent"
            android:layout_height="39dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#666666"
            android:textColorHint="#666666"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />



        <EditText
            android:id="@+id/editstate"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:hint="@string/State"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#666666"
            android:textColorHint="#666666"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />



        <EditText
            android:id="@+id/editcountry"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:hint="@string/select_country"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#666666"
            android:textColorHint="#666666"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />



        <EditText
            android:id="@+id/editCity"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:hint="@string/City"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#666666"
            android:textColorHint="#666666"
            android:textSize="16sp" />


        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/editDOB"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:hint="Date Of Birth"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#666666"
            android:textColorHint="#666666"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/editHeight"
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:hint="Height In Feet"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#666666"
            android:textColorHint="#666666"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/editweight"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:hint="weight In Kg"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#666666"
            android:textColorHint="#666666"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/editbust"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:hint="Bust In In"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#666666"
            android:textColorHint="#666666"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/editwaist"
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:hint="Waist In Inch"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#666666"
            android:textColorHint="#666666"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/edithip"
            android:layout_width="fill_parent"
            android:layout_height="41dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:hint="Hip In Inch"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#666666"
            android:textColorHint="#666666"
            android:textSize="16sp" />



        <ImageView
            android:id="@+id/imageView"
            android:layout_width="95dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/addphoto" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="95dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/addphoto" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="95dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/addphoto" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_corners"
            android:padding="3dp"
            android:text="@string/SignUp"
            android:textColor="@color/colorAccent"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>
    </ScrollView>